--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
               </div>
             </div>
             <div class="date-tag" id="dateTag">
-              <i class="fas fa-calendar-alt"></i> ১৫ জুলাই, ২০২৫
+              <i class="fas fa-calendar-alt"></i> রবিবার, ১৫ জুলাই, ২০২৫
             </div>
           </div>
 
